Fix issue alignment issue for comments icon

--- a/src/scss/RequestCard.module.scss
+++ b/src/scss/RequestCard.module.scss
@@ -82,19 +82,20 @@
 
 .comments {
   grid-area: comments;
-  display: flex;
   font-weight: 700;
   height: 100%;
+  display: flex;
   align-items: center;
 
-  & > *:first-child {
-    margin-right: 10px;
-  }
+  &__link {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 
-  &__count {
-    font-weight: 700;
-    color: colors.$blue-900;
-    padding-bottom: 2px;
+    & > .count {
+      color: colors.$blue-900;
+      margin-left: 10px;
+    }
   }
 }
 
